# ms-pred

./: pyproject.toml  reformat_massspecgym.py  requirements.txt  setup.py
configs/iceberg/: dag_train_nist20.yaml
data_scripts/: all_assign_subform.sh
data_scripts/dag/: run_magma.sh
launcher_scripts/: run_from_config.py
run_scripts/iceberg/: 01_run_dag_gen_train.sh  02_sweep_gen_thresh.py
src/ms_pred/dag_pred/: gen_model.py  predict_gen.py  train_gen.py
